Footer: fix width and wrap

--- a/src/modules/footer/_footer.sass
+++ b/src/modules/footer/_footer.sass
@@ -7,12 +7,14 @@
 	flex-direction: row
 	justify-content: space-between
 	align-items: center
-	flex-wrap: wrap
 	width: 100%
 	padding-top: 100px
 	padding-bottom: 100px
 	@extend %container-padding
 	background: #fff
+
+	@media screen and ( max-width: 1280px )
+		flex-wrap: wrap
 
 	&__section
 		padding-bottom: 2rem
@@ -28,4 +30,5 @@
 
 		&--wide
 			width: 300px
+			padding-right: 40px
 			color: $darkgray
